==> aabzel/trunk/source/mcal/mcal_stm32f4/adc/adc_mcal.c <==
#include "adc_mcal.h"
#include <stddef.h>
#include <stdio.h>
#include <string.h>
#include "adc_config.h"
#include "adc_custom_diag.h"
#include "adc_custom_types.h"
#include "data_utils.h"
#include "gpio_diag.h"
#include "std_includes.h"
#include "stm32f4xx_hal.h"
#include "time_mcal.h"
#include "log.h"

bool adc_init_one(uint8_t adc_num) {
    LOG_INFO(LG_ADC, "Init %u", adc_num);
    bool res = false;
    AdcHandle_t* AdcNode = AdcGetNode(adc_num);
    if(AdcNode) {
        const AdcConfig_t* AdcConfNode = AdcGetConfig(adc_num);
        if(AdcConfNode) {
            AdcNode->adc_h.Instance = AdcGetInstance(AdcConfNode->num);
            AdcNode->adc_h.Init.ClockPrescaler = ADC_CLOCK_SYNC_PCLK_DIV4;
            AdcNode->adc_h.Init.Resolution = AdcResolution2code(AdcConfNode->resolution);
            AdcNode->adc_h.Init.ScanConvMode = DISABLE;
            AdcNode->adc_h.Init.ContinuousConvMode = DISABLE;
            AdcNode->adc_h.Init.DiscontinuousConvMode = DISABLE;
            AdcNode->adc_h.Init.ExternalTrigConvEdge = ADC_EXTERNALTRIGCONVEDGE_NONE;
            AdcNode->adc_h.Init.ExternalTrigConv = ADC_SOFTWARE_START;
            AdcNode->adc_h.Init.DataAlign = ADC_DATAALIGN_RIGHT;
            AdcNode->adc_h.Init.NbrOfConversion = 1;
            AdcNode->adc_h.Init.DMAContinuousRequests = DISABLE;
            AdcNode->adc_h.Init.EOCSelection = ADC_EOC_SINGLE_CONV;
            HAL_StatusTypeDef ret;
            ret = HAL_ADC_Init(&AdcNode->adc_h);
            if(HAL_OK == ret) {
                res = true;
                LOG_INFO(LG_ADC, "Init %u Ok", adc_num);
            } else {
                res = false;
                LOG_ERROR(LG_ADC, "%u InitErr", adc_num);
            }
            if(res) {
                ret = HAL_ADC_Start(&AdcNode->adc_h);
                if(HAL_OK == ret) {
                    res = true;
                    LOG_INFO(LG_ADC, "%u StartOk", adc_num);
                } else {
                    res = false;
                    LOG_ERROR(LG_ADC, "%u StartErr", adc_num);
                }
            }
        } else {
            LOG_ERROR(LG_ADC, "%u ConfigErr", adc_num);
        }
    } else {
        LOG_ERROR(LG_ADC, "%u NodeErr", adc_num);
    }
    return res;
}
