==> aabzel/trunk/source/mcal/mcal_at32f4/adc/adc_mcal.c <==
#include "adc_mcal.h"
#include <stddef.h>
#include <stdint.h>
#include <stdio.h>
#include <string.h>
#include "adc_custom_diag.h"
#include "adc_custom_types.h"
#include "artery_at32f4xx.h"
#include "data_utils.h"
#include "gpio_mcal.h"
#include "log.h"
#include "microcontroller_const.h"
#include "time_mcal.h"
#include "utils_math.h"

bool adc_init_one(uint8_t num) {
    LOG_WARNING(LG_ADC, "Init ADC%u", num);
    bool res = false;
    const AdcConfig_t* Config = AdcGetConfig(num);
    if(Config) {
        LOG_WARNING(LG_ADC, "%s", AdcConfigToStr(Config));
        AdcHandle_t* Node = AdcGetNode(num);
        if(Node) {
            Node->resolution = Config->resolution;
            Node->v_ref_voltage = Config->v_ref_voltage;
            Node->is_idle = true;
            const AdcInfo_t* Info = AdcGetInfo(num);
            if(Info) {
                LOG_WARNING(LG_ADC, "ADC%u SpotInfo", num);
                Node->ADCx = Info->ADCx;

                crm_periph_clock_enable(Info->clock_type, TRUE);

                adc_base_config_type AdcBaseConfig = {0};

                adc_base_default_para_init(&AdcBaseConfig);

                AdcBaseConfig.sequence_mode = FALSE; //!!
                AdcBaseConfig.repeat_mode = FALSE;
                AdcBaseConfig.data_align = ADC_RIGHT_ALIGNMENT;
                AdcBaseConfig.ordinary_channel_length = 3;

                adc_base_config(Info->ADCx, &AdcBaseConfig);

                Node->max_code = ipow(2, Config->resolution) - 1;
                adc_resolution_set(Info->ADCx, AdcResolutionToArteryResol(Config->resolution));

                /* config ordinary trigger source and trigger edge */
                adc_ordinary_conversion_trigger_set(Info->ADCx, ADC_ORDINARY_TRIG_TMR1CH1, ADC_ORDINARY_TRIG_EDGE_NONE);

                /* config dma mode,it's not useful when common dma mode is use */
                adc_dma_mode_enable(Info->ADCx, FALSE);

                /* config dma request repeat,it's not useful when common dma mode is use */
                adc_dma_request_repeat_enable(Info->ADCx, FALSE);

                /* each ordinary channel conversion set occe flag */
                adc_occe_each_conversion_enable(Info->ADCx, TRUE);

                /* enable adc overflow interrupt */
                adc_interrupt_enable(Info->ADCx, ADC_OCCO_INT, TRUE);

                /* enable voltage monitoring out of range interrupt */
                adc_interrupt_enable(Info->ADCx, ADC_VMOR_INT, TRUE);

                /*!< preempt channels conversion end interrupt */
                adc_interrupt_enable(Info->ADCx, ADC_PCCE_INT, TRUE);

                /*!< ordinary channels conversion end interrupt */
                adc_interrupt_enable(Info->ADCx, ADC_OCCE_INT, TRUE);

                adc_enable(Info->ADCx, TRUE);
                while(adc_flag_get(Info->ADCx, ADC_RDY_FLAG) == RESET) {
                }

                /* adc calibration */
                adc_calibration_init(Info->ADCx);
                while(adc_calibration_init_status_get(Info->ADCx)) {
                }

                adc_calibration_start(Info->ADCx);
                while(adc_calibration_status_get(Info->ADCx)) {
                }

                adc_ordinary_software_trigger_enable(Node->ADCx, TRUE);
                res = true;
                LOG_INFO(LG_ADC, "ADC%u Start", num);

                LOG_WARNING(LG_ADC, "%s", AdcNodeToStr(Node));
                Node->init_done = true;
                log_level_get_set(LG_ADC, LOG_LEVEL_INFO);
            } else {
                LOG_ERROR(LG_ADC, "ADC%u InfoErr", num);
                res = false;
            }
            LOG_INFO(LG_ADC, "%s", AdcNodeToStr(Node));

        } else {
            LOG_ERROR(LG_ADC, "ADC%u NodeErr", num);
        }
    } else {
        LOG_DEBUG(LG_ADC, "ADC%u ConfigErr", num);
        res = true;
    }
    log_level_get_set(LG_ADC, LOG_LEVEL_INFO);
    return res;
}
